--- a/index.html
+++ b/index.html
@@ -17,116 +17,55 @@
       font-family: Arial, sans-serif;
       background-color: var(--light-color);
       color: var(--dark-color);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
 
-    header {
-      background-color: var(--primary-color);
-      color: var(--light-color);
-      padding: 1rem 2rem;
+    .logo {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    .logo img {
+      max-width: 150px;
+      height: auto;
+    }
+
+    .buttons {
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
+      gap: 1rem;
       align-items: center;
     }
 
-    header a {
+    .button {
+      background-color: var(--primary-color);
       color: var(--light-color);
       text-decoration: none;
-      margin: 0 1rem;
+      padding: 1rem 2rem;
+      border-radius: 8px;
+      font-size: 1.2rem;
       font-weight: bold;
+      text-align: center;
+      width: 200px;
     }
 
-    header a:hover {
-      text-decoration: underline;
-    }
-
-    main {
-      padding: 2rem;
-    }
-
-    footer {
+    .button:hover {
       background-color: var(--dark-color);
-      color: var(--light-color);
-      text-align: center;
-      padding: 1rem 0;
-    }
-
-    .markdown {
-      background-color: var(--secondary-color);
-      padding: 2rem;
-      border-radius: 8px;
-      font-family: 'Courier New', Courier, monospace;
-    }
-
-    .markdown h1, .markdown h2, .markdown h3 {
-      color: var(--primary-color);
-    }
-
-    .markdown pre {
-      background-color: var(--light-color);
-      padding: 1rem;
-      border: 1px solid var(--dark-color);
-      overflow: auto;
-    }
-
-    .video-container {
-      margin-bottom: 2rem;
-      text-align: center;
-    }
-
-    .video-container img {
-      max-width: 100%;
-      height: auto;
-      border: 2px solid var(--primary-color);
-      border-radius: 8px;
     }
   </style>
 </head>
 <body>
-  <header>
-    <div>My Website</div>
-    <nav>
-      <a href="#about">About Us</a>
-      <a href="#documentation">Documentation</a>
-      <a href="#connect">Connect</a>
-    </nav>
-  </header>
-
-  <main>
-    <section id="about">
-      <h1>About Us</h1>
-      <p>Welcome to our website! We are committed to delivering a simple, elegant experience for our users.</p>
-    </section>
-
-    <section id="documentation">
-      <h1>Documentation</h1>
-      <div class="video-container">
-        <img src="demo.gif" alt="Demo Video">
-      </div>
-      <div class="markdown">
-        <h2>Getting Started</h2>
-        <p>To get started, follow the steps below:</p>
-        <pre>
-1. Clone the repository
-2. Install dependencies
-3. Run the application
-        </pre>
-        <h2>Features</h2>
-        <ul>
-          <li>Clean design</li>
-          <li>Easy to use</li>
-          <li>Lightweight</li>
-        </ul>
-      </div>
-    </section>
-
-    <section id="connect">
-      <h1>Connect</h1>
-      <p>Feel free to reach out to us via email at <a href="mailto:contact@website.com">contact@website.com</a>.</p>
-    </section>
-  </main>
-
-  <footer>
-    &copy; 2024 My Website. All rights reserved.
-  </footer>
+  <div class="logo">
+    <img src="blackboxscan.png" alt="Logo">
+  </div>
+  <div class="buttons">
+    <a href="#about" class="button">About Us</a>
+    <a href="#documentation" class="button">Documentation</a>
+    <a href="#connect" class="button">Connect</a>
+  </div>
 </body>
 </html>
