--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
     <img src="blackboxscan.png" alt="Logo">
   </div>
   <div class="buttons">
-    <a href="#about" class="button">About Us</a>
-    <a href="#documentation" class="button">Documentation</a>
-    <a href="#connect" class="button">Connect</a>
+    <a href="aboutus.html" class="button">About Us</a>
+    <a href="documentation.html" class="button">Documentation</a>
+    <a href="connect.html" class="button">Connect</a>
   </div>
 </body>
 </html>
