--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </div>
   <div class="buttons">
     <a href="aboutus.html" class="button">About Us</a>
-    <a href="documentation.html" class="button">Documentation</a>
+    <a href="documentation3.html" class="button">Documentation</a>
     <a href="connect.html" class="button">Connect</a>
   </div>
 </body>
