--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <a href="aboutus.html" class="button">About Us</a>
     <a href="documentation3.html" class="button">Documentation</a>
     <a href="connect.html" class="button">Connect</a>
+    <a href="demo.html" class="button">Try the Demo Now!</a>
   </div>
 </body>
 </html>
